# Offer-Catcher

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
backend/: Procfile  dev_server.py  models  pyproject.toml
backend/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  answer_specialist.py  base.py  chat_agent.py  common.py  interview_agent.py  router.py  scorer.py  title_generator.py  vision_extractor.py
backend/app/api/: __init__.py
backend/app/config/: __init__.py  settings.py
backend/app/db/: __init__.py  checkpointer.py  graph_client.py  postgres_client.py  qdrant_client.py  redis_client.py
backend/app/llm/: __init__.py
backend/app/memory/: __init__.py  cursor.py  hooks.py  init.py  injection.py  io.py  long_term.py  store.py  templates.py
backend/app/models/: __init__.py  agent.py  chat_session.py  enums.py  extract.py  interview_session.py  question.py  schemas.py
backend/app/mq/: __init__.py  consumer.py  message_helper.py  producer.py  thread_pool_consumer.py
backend/app/pipelines/: ingestion.py  retrieval.py
backend/app/prompts/: chat_agent.md  react_agent.md  router.md
backend/app/services/: __init__.py  cache_service.py  clustering_service.py  xfyun_asr.py
backend/app/skills/: __init__.py
backend/app/tools/: __init__.py  context.py  embedding_tool.py  interview_tools.py  memory_tools.py  query_graph_tool.py  reranker_tool.py  search_question_tool.py  vision_extractor_tool.py  web_search_tool.py
backend/app/utils/: __init__.py  agent.py  cache.py  circuit_breaker.py  hasher.py  image.py  logger.py  ocr.py  prompt.py  retry.py  telemetry.py  warmup.py
backend/config/: position_mappings.json
backend/evaluation/: __init__.py  answer_value_experiment.py  backfill_neo4j.py
backend/evaluation/experiment_results/: rag_answer_value_20260423_224051.json
backend/migrations/: 001_add_memory_enhancement_fields.sql  run_migration.py
backend/scripts/: export_qdrant.py  import_qdrant.py  resend_to_queue.py  restore_answers_by_id.py
backend/tests/: __init__.py  conftest.py  test_chat_agent_tools.py  test_graph_client.py  test_interview_agent.py  test_router.py  test_streaming.py  test_vision_extractor.py
backend/tests/agents/: __init__.py  test_chat_agent_tools.py  test_interview_agent.py  test_scorer.py  test_vision_extractor.py
backend/tests/api/: __init__.py  test_favorites_api.py  test_sse_stream.py
backend/tests/db/: __init__.py  test_favorites.py  test_graph_client.py  test_postgres_client.py  test_qdrant_client.py  test_session_summaries.py
backend/tests/domain/: test_chat_aggregates.py  test_favorite_aggregates.py
backend/tests/e2e/: __init__.py  test_e2e.py
backend/tests/evals/: __init__.py  datasets.py  metrics.py  test_agent_eval.py
backend/tests/evaluation/: test_answer_value_experiment.py
backend/tests/memory/: __init__.py  (+16 more)
backend/workers/: answer_worker.py  clustering_worker.py  extract_worker.py  reembed_worker.py
(+355 files in other folders)
