[project]
name = "offer-catcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.1.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "qdrant-client>=1.0",
    "pika>=1.3.0",
    "langchain-community>=0.4.1",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.11.4",
    "sentence-transformers>=5.3.0",
    "langchain-qdrant>=1.1.0",
    "streamlit>=1.55.0",
    "aiobreaker>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
