[project]
name = "offer-catcher"
version = "0.1.0"
description = "面经收集与智能复习系统 - 基于 Multi-Agent 架构与混合 RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=1.1.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "qdrant-client>=1.0",
    "pika>=1.3.0",
    "langchain-community>=0.4.1",
    "sentence-transformers>=5.3.0",
    "langchain-qdrant>=1.1.0",
    "streamlit>=1.55.0",
    "aiobreaker>=1.2.0",
    "langchain-tavily>=0.2.17",
    "aio-pika>=9.6.2",
    "pytest-asyncio>=1.3.0",
    "neo4j>=5.27.0",
    "nest-asyncio>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
