[project]
name = "offer-catcher"
version = "0.1.0"
description = "面经收集与智能复习系统 - 基于 Multi-Agent 架构与混合 RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=1.1.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "qdrant-client>=1.0",
    "pika>=1.3.0",
    "langchain-community>=0.4.1",
    "sentence-transformers>=5.3.0",
    "langchain-qdrant>=1.1.0",
    "aiobreaker>=1.2.0",
    "langchain-tavily>=0.2.17",
    "aio-pika>=9.6.2",
    "pytest-asyncio>=1.3.0",
    "neo4j>=5.27.0",
    "nest-asyncio>=1.6.0",
    "langchain-huggingface>=1.2.1",
    "paddlepaddle>=3.3.1",
    "paddleocr>=3.4.0",
    "easyocr>=1.7.2",
    "hdbscan>=0.8.42",
    "apscheduler>=3.11.2",
    "redis>=7.4.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-exporter-prometheus>=0.49b0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    # Agent 评估框架
    "agentevals>=0.0.9",
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "prometheus-client>=0.24.1",
    "websockets>=16.0",
    "sentencepiece>=0.2.1",
    "langchain-deepseek>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "watchdog>=4.0.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
